--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="gray_light">#E6E8EB</color>
 
     <color name="menu_background">#3772E7</color>
+
+    <color name="switch_night_secondary">#9FBBF3</color>
+    <color name="switch_night_primary">#3772E7</color>
 </resources>
