--- a/app/src/main/res/layout/fragment_favorites_tracks.xml
+++ b/app/src/main/res/layout/fragment_favorites_tracks.xml
@@ -1,42 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/left_top_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="80dp" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/left_top_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="80dp" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/right_top_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="80dp" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/right_top_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="80dp" />
 
-    <ImageView
-        android:id="@+id/not_found_image"
-        android:src="@drawable/not_found"
-        android:layout_marginTop="120dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="120dp"
-        android:layout_height="120dp" />
+        <ImageView
+            android:id="@+id/not_found_image"
+            android:src="@drawable/not_found"
+            android:layout_marginTop="120dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="120dp"
+            android:layout_height="120dp" />
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="0dp"
-        app:layout_constraintStart_toStartOf="@id/left_top_guideline"
-        app:layout_constraintEnd_toEndOf="@id/right_top_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/not_found_image"
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            app:layout_constraintStart_toStartOf="@id/left_top_guideline"
+            app:layout_constraintEnd_toEndOf="@id/right_top_guideline"
+            app:layout_constraintTop_toBottomOf="@+id/not_found_image"
+            android:layout_marginTop="@dimen/space_xl"
+            android:text="@string/favorites_tracks_empty"
+            android:textAlignment="center"
+            style="@style/SearchErrorStyle" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/favorite_tracks_items"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="@dimen/space_xl"
-        android:text="@string/favorites_tracks_empty"
-        android:textAlignment="center"
-        style="@style/SearchErrorStyle" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
