--- a/app/src/main/res/layout/fragment_create_playlist.xml
+++ b/app/src/main/res/layout/fragment_create_playlist.xml
@@ -51,7 +51,7 @@
         app:layout_constraintStart_toStartOf="@id/left_top_guideline"
 
         app:layout_constraintTop_toBottomOf="@+id/artwork"
-
+        android:fontFamily="@font/ys_display_regular"
         android:layout_marginTop="@dimen/space_xxxl"
         android:hint="@string/playlist_name"
         android:maxLines="1"
@@ -74,6 +74,7 @@
         android:text="@string/playlist_name"
         android:textSize="@dimen/text_size_xs"
         android:textColor="#3772E7"
+        android:fontFamily="@font/ys_display_regular"
         android:background="@android:color/white"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
@@ -93,7 +94,7 @@
         app:layout_constraintStart_toStartOf="@id/left_top_guideline"
 
         app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
-
+        android:fontFamily="@font/ys_display_regular"
         android:layout_marginTop="@dimen/space_xl"
         android:hint="@string/playlist_description"
         android:maxLines="1"
@@ -116,6 +117,7 @@
         android:text="@string/playlist_description"
         android:textSize="@dimen/text_size_xs"
         android:textColor="#3772E7"
+        android:fontFamily="@font/ys_display_regular"
         android:background="@android:color/white"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
@@ -131,9 +133,10 @@
         android:layout_height="44dp"
         android:layout_marginBottom="@dimen/space_xxxl"
         android:text="Создать"
-        android:textSize="@dimen/text_size_s"
+        android:textSize="@dimen/text_size_m"
         android:textColor="?attr/colorPrimarySurface"
         android:fontFamily="@font/ys_display_medium"
+        android:textFontWeight="500"
         android:paddingVertical="6dp"
         android:paddingHorizontal="8dp"
         android:backgroundTint="@color/gray"
