--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -81,6 +81,7 @@
         android:id="@+id/recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="@dimen/space_xl"
         app:layout_constraintStart_toStartOf="@id/left_bottom_guideline"
         app:layout_constraintEnd_toEndOf="@id/right_bottom_guideline"
         app:layout_constraintTop_toBottomOf="@id/create_playlist"
