--- a/app/src/main/res/layout/fragment_create_playlist.xml
+++ b/app/src/main/res/layout/fragment_create_playlist.xml
@@ -31,6 +31,7 @@
 
     <ImageView
         android:id="@+id/artwork"
+        android:scaleType="centerCrop"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/space_xxl"
